# AI-skin-designer

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: setup_env.ps1  test_flux.py
src/cs2skin/: __init__.py  app.py  assets.py  cli.py  config.py  director.py  export.py  extract_base_maps.py  finishes.py  generate.py  install_assets.py  partition.py  pbr.py  pipeline.py  preview.py  rarity.py  skintype.py
